src/index.css
:root {
	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	line-height: 1.5;
	font-weight: 400;

	color-scheme: light dark;
	color: rgba(255, 255, 255, 0.87);
	background-color: #242424;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

a {
	font-weight: 500;
	color: #ffffff;
	text-decoration: inherit;
}
a:hover {
	color: #ffffff;
}

body {
	margin: 0;
	/* display: flex;
	place-items: center; */
	min-width: 320px;
	min-height: 100vh;
}

h1 {
	font-size: 3.2em;
	line-height: 1.1;
}

.navbar {
	display: flex;
	align-items: center;
	justify-content: space-between;
	flex-direction: row;
	background-color: #2c2c2c8f;
	width: 100%;
	padding: 10px;
}

.nav-items {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: row;
	margin-right: 2rem;
}

.nav-items li {
	padding: 1rem;
}

.nav-items li a {
	color: white;
	will-change: filter;
	transition: filter 300ms;
}

.nav-items li a:hover {
	/* text-shadow: white 1px 1px 3px;
	transition: text-shadow 0.5s ease-in-out; */
	filter: drop-shadow(0 0 0.75em #ffffffaa);
}

.logo img {
	height: 75px;
	width: auto;
}

.nav-items {
	list-style: none;
}

.card-container {
	margin-top: 3rem;
}

.cardImg {
	min-width: 75%;
	max-height: 300px;
	object-fit: cover;
	border-radius: 15px;
	margin: 1rem 0;
}

.customOverlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.5);
	display: flex;
	justify-content: center;
	align-items: center;
}

.customModal {
	background-color: #24242469;
	width: 400px;
	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
	outline: none;
	padding: 20px;
}

.cardImg:hover {
	box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.425);
}

@media (prefers-color-scheme: light) {
	:root {
		color: #213547;
		background-color: #ffffff;
	}
	a:hover {
		color: #d6d8ff;
	}
	button {
		background-color: #f9f9f9;
	}
}

